--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <nav>
             <ul>
                 <li><a href="titlePage.aspx">Title Page</a></li>
-                <li><a href="default2.aspx">Practical File</a></li>
+                <li><a href="default2.aspx.cs">Practical File</a></li>
                 <!-- Add links to other pages as needed -->
             </ul>
         </nav>
